prod/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devix-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  tls:
    - hosts:
        - api.devix.app
      secretName: devix-prod-tls
  rules:
    - host: api.devix.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devix-backend-prod
                port:
                  number: 80
